# Owl-Decentra

./: .gitignore  README.md  client_segments.csv  cluster_profiles_summary.csv  pyproject.toml  test.txt
hackaton/: .env  .gitignore  README.md  client_segments.csv  client_segments.parquet  cluster_profiles_summary.csv  lightweight_client_segments.csv  pyproject.toml
hackaton/src/: clustering_pipeline.py  gmm.py  gmm_spectralclustering.py  k-means.py  load_parquet_to_pg.py
