[tool.poetry]
name = "owl-decentra"
version = "0.1.0"
description = ""
authors = ["Andrey8705 <Andrey.shadrin.1998@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
numpy = "^2.2.6"
scikit-learn = "^1.6.1"
scipy = "^1.15.3"
matplotlib = "^3.10.3"
seaborn = "^0.13.2"
plotly = "^6.1.1"
umap-learn = "^0.5.7"
pyarrow = "^20.0.0"
python-dotenv = "^1.1.0"
sqlalchemy = "^2.0.41"
psycopg2-binary = "^2.9.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
